--- a/styles.css
+++ b/styles.css
@@ -79,8 +79,8 @@ section {
     padding-top: 5rem;
     margin-top: 3rem;
     margin-bottom: 3rem;
-    background: url('img/flor.png') top right no-repeat,
-        url('img/flor-esquerda.png') bottom left no-repeat;
+    background: url('img/boladefutebolcopadomundo2022-1.png') top right no-repeat,
+        url('img/png-clipart-european-cup-world-cup-trophy-european-cup-world-cup.png') bottom left no-repeat;
     background-size: 180px 180px;
     /* Ajuste o tamanho conforme necessário */
 }
